feature-修改页面大小样式、修改BaseDialog写法为vue3新语法

--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -12,6 +12,12 @@ body {
   background-color: @background-color-base;
 }
 
+body,
+#app {
+  width: 100%;
+  height: 100%;
+}
+
 input,
 textarea {
   padding: 1px 5px;
@@ -33,6 +39,5 @@ textarea {
 .box--empty {
   display: block;
   .full;
-  background: url('../images/common/empty.png') center center/221px 151px
-    no-repeat;
+  background: url('../images/common/empty.png') center center/221px 151px no-repeat;
 }
